Ask for authentication instead of throwing an error Fixed some overlaps with the banner id

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -645,7 +645,7 @@ header ul li:hover, header ul li.selected {
   color: #fff;
 }
 
-#banner {
+div#banner {
   height: 200px;
   background: url(../images/banner.png) no-repeat center left,
         url(../images/banner_b.png) center right #fff;
@@ -655,7 +655,7 @@ header ul li:hover, header ul li.selected {
   width: 600px;
   height: 100px;
 }
-#banner .title {
+div#banner .title {
   margin-top: 20px;
   height: 150px;
   max-width: 100%;
@@ -670,7 +670,7 @@ header ul li:hover, header ul li.selected {
   opacity: 0.65;
   text-decoration: none;
 }
-#banner .title img {
+div#banner .title img {
   float: left;
   max-width: 100%;
   height: 90px;
@@ -2653,7 +2653,7 @@ header > ul li a i {
   header.header > ul li a i + span {
     display: none;
   }
-  #banner .banner-overlay {
+  div#banner .banner-overlay {
     display: inline;
     height: 200px;
   }
